        
        Other functions available are quote_plus, unquote, unquote_plus.

      - Added basic cataloging functionality.

      - Added functions (zope.app.container.constraints.contains and
        zope.app.container.constraints.containers) that greatly simplify
        expressing containment constraints.

    Restructuring

      - Refactored Registration component for local components
      
        + Deprecated the `activated()` and `deactivated()` method. It is now
          replaced with the 'IRegistrationActivatedEvent' and
          'IRegistrationDectivatedEvent', respectively.

      - Replaced NotFoundError uses with more specific and meaningful
        exceptions. Eventually, NotFoundError will be deprecated.

        - Publishing traversal components noew raise NotFound

        - Other traversal components raise TraversalError

        - getPrincipal of IAuthenticationService now raises
          PrincipalLookupError. 

      - Removed Browser Menu Service and implemented menus as subscriber
        adapters. Menu Item Types (in other words, menus) are now utilities
        that provide `IMenuItemType`. 

        + Completes http://dev.zope.org/Zope3/AdaptersForMenuItems. New
          features such as sub-menus, icons, disabled entries and so on were
          not well defined and should be reconsidered in a different proposal.

        + Backward-compatibility of the existing `browser` directives was
          ensured. 

        + If you have a directive that accepts a menu as attribute, it now
          needs to be a `MenuField`, so that it is correctly resolved to a menu
          interface.

        + The `browser:menu` directive has now an optional `interface`
          attribute that allows you to specify a particular menu interface
          instead of having the machinery create one for you.

        + The two API methods `getMenu()` and `getFirstItemOfMenu()` of the
          Browser Menu Service are now available as functions in 