@@ -7,6 +7,7 @@
 
   <include package="zope.app.exception.browser" />
   <include package="zope.app.traversing.browser" />
+  <include package="zope.app.security.browser" />
 
   <include package="zope.app.container.browser" />
   <include package="zope.app.registration.browser" />
