@@ -1,10 +1,10 @@
 <zope:configure 
-   xmlns:zope="http://namespaces.zope.org/zope"
-   xmlns="http://namespaces.zope.org/browser"
-   i18n_domain="zope">
+    xmlns:zope="http://namespaces.zope.org/zope"
+    xmlns="http://namespaces.zope.org/browser"
+    i18n_domain="zope">
 
   <tool
-      interface="zope.app.securitypolicy.interfaces.IRole"
+      interface="..interfaces.IRole"
       title="Role"
       description="Roles are used to combine permissions and can be assigned
       to principals."
@@ -15,45 +15,31 @@
   <addform
       label="New Role"
       name="addRole.html"
-      schema="zope.app.securitypolicy.interfaces.IRole"
+      schema="..interfaces.IRole"
       permission="zope.Security"
-      content_factory="zope.app.securitypolicy.role.PersistentRole"
+      content_factory="..role.LocalRole"
       arguments="title"
       keyword_arguments="description"
       fields="title description" />
 
   <editform
-      schema="zope.app.securitypolicy.interfaces.IRole"
+      schema="..interfaces.IRole"
       name="edit.html"
       menu="zmi_views" title="Edit"
       permission="zope.ManageContent"/>
 
   <defaultView
-      for="zope.app.securitypolicy.interfaces.IRole"
+      for="..interfaces.IRole"
       name="edit.html" />
 
   <!-- Menu entry for "Add Utility" menu -->
   <addMenuItem
-      class="zope.app.securitypolicy.role.PersistentRole"
+      class="..role.LocalRole"
       title="Role"
-      description="A Persistent Role"
+      description="A Security Role"
       permission="zope.Security"
       view="addRole.html"
-      />
-
-  <!-- Custom Role registration screen -->
-  <addform
-      label="New Role Registration"
-      for="zope.app.securitypolicy.interfaces.IRole"
-      name="addRegistration.html"
-      schema="zope.app.utility.interfaces.IUtilityRegistration"
-      class="zope.app.utility.browser.AddRegistration"
-      permission="zope.ManageServices"
-      content_factory="zope.app.securitypolicy.role.RoleRegistration"
-      arguments="name interface componentPath"
-      set_after_add="status"
-      fields="name interface componentPath permission status" />
-
+      />  
 
 <!-- Role Permissions -->
 
@@ -64,19 +50,26 @@
       for="zope.app.site.interfaces.ISiteManager"
       permission="zope.Security"
       class=".rolepermissionview.RolePermissionView">
-
-    <page name="AllRolePermissions.html" template="manage_access.pt" 
-          menu="zmi_actions" title="Role-Permissions"
-    />
-          <!-- menu="zmi_actions" title="Role Permissions" / -->
-    <page name="RolePermissions.html" template="manage_roleform.pt" />
-    <page name="RolesWithPermission.html" template="manage_permissionform.pt"/>
-
+    <page
+        name="AllRolePermissions.html" 
+        template="manage_access.pt" 
+        menu="zmi_actions" title="Role-Permissions"
+        />
+    <!-- menu="zmi_actions" title="Role Permissions" / -->
+    <page
+        name="RolePermissions.html" 
+        template="manage_roleform.pt" 
+        />
+    <page
+        name="RolesWithPermission.html" 
+        template="manage_permissionform.pt"
+        />
   </pages>
 
   <zope:class class=".rolepermissionview.PermissionRoles">
-    <zope:require permission="zope.Security"
-                  attributes="roles rolesInfo id title description" />
+    <zope:require 
+        permission="zope.Security"
+        attributes="roles rolesInfo id title description" />
   </zope:class>
 
   <zope:class class=".rolepermissionview.RolePermissions">
@@ -88,12 +81,13 @@
 <!-- Granting Roles and Permissions to Principals -->
 
   <page
-    for="zope.app.annotation.interfaces.IAnnotatable"
-    name="grant.html"
-    permission="zope.Security"
-    template="granting.pt" 
-    class=".granting.Granting"
-    menu="zmi_actions" title="Grant" />
+      for="zope.app.annotation.interfaces.IAnnotatable"
+      name="grant.html"
+      permission="zope.Security"
+      template="granting.pt" 
+      class=".granting.Granting"
+      menu="zmi_actions" title="Grant" 
+      />
 
 
 </zope:configure>
