@@ -19,10 +19,11 @@ from persistent import Persistent
 from zope.interface import implements
 
 from zope.app import zapi
-from zope.app.container.contained import Contained
+from zope.app.location import Location
 from zope.app.securitypolicy.interfaces import IRole
-from zope.app.utility import UtilityRegistration
 
+from zope.app.i18n import ZopeMessageIDFactory as _
+NULL_ID = _('<role not activated>')
 
 class Role(object):
     implements(IRole)
@@ -33,28 +34,108 @@ class Role(object):
         self.description = description
 
 
-class PersistentRole(Contained, Persistent):
+class LocalRole(Persistent, Location):
     implements(IRole)
 
     def __init__(self, title, description=""):
-        self.id = '<role not activated>'
+        self.id = NULL_ID
         self.title = title
         self.description = description
 
+# BBB: Renamed component on 12/05/2004
+PersistentRole = LocalRole
+from zope.app.utility import UtilityRegistration
+RoleRegistration = UtilityRegistration
 
-class RoleRegistration(UtilityRegistration):
-    """Role Registration
+def setIdOnActivation(event):
+    """Set the permission id upon registration activation.
 
-    We have a custom registration here, since we want active registrations to
-    set the id of the role.
+    Let's see how this notifier can be used. First we need to create an event
+    using the permission instance and a registration stub:
+
+    >>> class Registration:
+    ...     def __init__(self, obj, name):
+    ...         self.object = obj
+    ...         self.name = name
+    ...
+    ...     def getComponent(self):
+    ...         return self.object
+
+    >>> role1 = LocalRole('Role 1', 'A first role')
+    >>> role1.id
+    u'<role not activated>'
+    >>> from zope.app.registration import registration 
+    >>> event = registration.RegistrationActivatedEvent(
+    ...     Registration(role1, 'role1'))
+
+    Now we pass the event into this function, and the id of the role should be
+    set to 'role1'.
+
+    >>> setIdOnActivation(event)
+    >>> role1.id
+    'role1'
+
+    If the function is called and the component is not a local permission,
+    nothing is done:
+
+    >>> class Foo:
+    ...     id = 'no id'
+    >>> foo = Foo()
+    >>> event = registration.RegistrationActivatedEvent(
+    ...     Registration(foo, 'foo'))
+    >>> setIdOnActivation(event)
+    >>> foo.id
+    'no id'
     """
-    def activated(self):
-        role = self.getComponent()
-        role.id = self.name
+    role = event.object.getComponent()
+    if isinstance(role, LocalRole):
+        role.id = event.object.name
 
-    def deactivated(self):
-        role = self.getComponent()
-        role.id = '<role not activated>'
+
+def unsetIdOnDeactivation(event):
+    """Unset the permission id up registration deactivation.
+
+    Let's see how this notifier can be used. First we need to create an event
+    using the permission instance and a registration stub:
+
+    >>> class Registration:
+    ...     def __init__(self, obj, name):
+    ...         self.object = obj
+    ...         self.name = name
+    ...
+    ...     def getComponent(self):
+    ...         return self.object
+
+    >>> role1 = LocalRole('Role 1', 'A first role')
+    >>> role1.id = 'role1'
+
+    >>> from zope.app.registration import registration 
+    >>> event = registration.RegistrationDeactivatedEvent(
+    ...     Registration(role1, 'role1'))
+
+    Now we pass the event into this function, and the id of the role should be
+    set to NULL_ID.
+
+    >>> unsetIdOnDeactivation(event)
+    >>> role1.id
+    u'<role not activated>'
+
+    If the function is called and the component is not a local role,
+    nothing is done:
+
+    >>> class Foo:
+    ...     id = 'foo'
+    >>> foo = Foo()
+    >>> event = registration.RegistrationDeactivatedEvent(
+    ...     Registration(foo, 'foo'))
+    >>> unsetIdOnDeactivation(event)
+    >>> foo.id
+    'foo'
+    """
+    role = event.object.getComponent()
+    if isinstance(role, LocalRole):
+        role.id = NULL_ID
+
     
 
 def checkRole(context, role_id):
